Implement Sponge support (#99) + Substantial refactoring
* Closes #99
* Generate event listeners by manual method scan when running on
  Sponge API 9. Using the standard approach, registration fails
  due use of an isolated classloader. See
  https://github.com/SpongePowered/Sponge/issues/3747
* Some refactoring. Use '.plugin' package for plugin entrypoints.
  Define SCM in main pom; add codecov profile. Use futures in
  EnvEnforcer, EnvUserResolver: this may alter the thread context
  of some command executions.
* Remove Java 8 detection entirely. LibertyBans never was a
  popular plugin, so there's no need to cater to those who forget
  to read. More importantly, Java 8 usage dwindles and many other
  plugins now require newer Java versions.
* Add relocation protection. We now serve and appease users who
  suffer unrelocated libraries. However, the real motivation is
  to support Sponge, which is warranted in its inclusion of an
  older version of HikariCP.
* Refactor bootstrap loggers and avoid depending on slf4j in
  bans-bootstrap.
* Extract executable jar without relying on plugin jar file.
      The Sponge API does not provide a method to access a
  plugin's jar file. Neither does it allow dynamically scanning
  plugin resources. As such, including directories of jars inside
  the executable distribution as used to occur requires us to
  squeeze from rock the Path to our plugin jar while running on
  Sponge or else manually list each dependency jar.
      To solve this, the directory of dependencies belonging to a
  dependency bundle is now zipped as its own jar, after which the
  launcher performs double-extraction on the twice-nested jars.
  With this solution, adding dependencies to bans-core remains
  trivial, requiring only the XML dependency declaration.
* Update contribution guide, CONTRIBUTING.md, with code style
  basics and information on addons.